gulpfile z-index fix

--- a/app/assets/styles/modules/_navbar.css
+++ b/app/assets/styles/modules/_navbar.css
@@ -6,10 +6,18 @@
 }
 
 @media(max-width: 372px){
-	#brand{
+	.navbar-brand{
 		font-size: 14px;
 	}
 }
+
+/*.navbar-inverse .navbar-toggle:focus,
+.navbar-inverse .navbar-toggle:active{
+	border-color: green;
+	border: 5px solid yellow;
+	background-color: red;
+	border: none;
+}*/
 
 /*.no-collapse{
 	display: block !important;
